--- a/index.html
+++ b/index.html
@@ -36,7 +36,43 @@
     </nav>
     <div class="container flex">
         <div class="left border">
-            <div class="library"></div>
+            <div class="library">
+                <div class="heading">
+                    <span> Your Library</span>
+                    <span><img class="invert add" src="svg/add.svg" width="20px"></span>
+                </div>
+                <div class="firstplaylist">
+                    <span>Create your first playlist</span>
+                    <p> It's easy, we'll help you</p>
+                    <span id="playlistbutton">
+                        <div>Create Playlist</div>
+                    </span>
+                </div>
+                <div class="Podcast">
+                    <span>Let's find some podcast to follow</span>
+                    <p> We'll keep you updated on new episodes</p>
+                    <span id="podcastbutton">
+                        <div>Browse Podcasts</div>
+                    </span>
+                </div>
+                <div>
+                    <ul class="other">
+                        <li>Legal</li>
+                        <li>Safety & Privacy Center</li>
+                        <li>Privacy Policy</li>
+                    </ul>
+                    <ul class="other">
+                        <li>Cookies</li>
+                        <li>About Ads</li>
+                        <li>Accessibility</li>
+                    </ul>
+                    <h3> Cookies</h3>
+                </div>
+                <div class="language">
+                    <div><img class="invert"src="svg/globe.svg" height="18px"></div>
+                    <div>English</div>
+                </div>
+            </div>
         </div>
         <div class="right border"></div>
     </div>
