--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
     </nav>
     <div class="container flex">
         <div class="left border">
-            <div class="library">
+            <div class="library border">
                 <div class="heading">
                     <span> Your Library</span>
-                    <span><img class="invert add" src="svg/add.svg" width="20px"></span>
+                    <span class="add"><img class="invert " src="svg/add.svg" width="20px"></span>
                 </div>
                 <div class="firstplaylist">
                     <span>Create your first playlist</span>
@@ -74,7 +74,39 @@
                 </div>
             </div>
         </div>
-        <div class="right border"></div>
+        <div class="right border">
+            <div class="header2">Trending Songs
+            <span class="showall">Show all</span></div>
+            <div class="spotifyPlaylists">
+                <div class="cardContainer flex">
+                    <div class="card">
+                      <img aria-hidden="false" draggable="false" loading="lazy" src="https://i.scdn.co/image/ab67616d00001e026fbb60d6a7e03ccb940a518e" data-testid="card-image" alt="" class="mMx2LUixlnN_Fu45JpFB yMQTWVwLJ5bV8VGiaqU3 yOKoknIYYzAE90pe7_SE Yn2Ei5QZn19gria6LjZj" height="150vh">
+                        <h2>Sapphire </h2>
+                        <p>Ed sheeren</p>
+                    </div>
+                    <div class="card">
+                   <img aria-hidden="false" draggable="false" loading="lazy" src="https://i.scdn.co/image/ab67616d00001e02c05d5034282ebb1a0d94a26c" data-testid="card-image" alt="" class="mMx2LUixlnN_Fu45JpFB yMQTWVwLJ5bV8VGiaqU3 yOKoknIYYzAE90pe7_SE Yn2Ei5QZn19gria6LjZj" height="150vh">
+                        <h2>Shaky</h2>
+                        <p>Sanju Rathod,G-SPXRK</p>
+                    </div>
+                    <div class="card">
+                      <img aria-hidden="false" draggable="false" loading="lazy" src="https://i.scdn.co/image/ab67616d00001e0279dd2165f2180c79713bfe4a" data-testid="card-image" alt="" class="mMx2LUixlnN_Fu45JpFB yMQTWVwLJ5bV8VGiaqU3 yOKoknIYYzAE90pe7_SE Yn2Ei5QZn19gria6LjZj" height="150vh">
+                        <h2>Muththa Mazhai </h2>
+                        <p>A.R Rahman, Chinmayi, Siva Ananth</p>
+                    </div>
+                    <div class="card">
+                      <img aria-hidden="false" draggable="false" loading="lazy" src="https://i.scdn.co/image/ab67616d00001e02975c6d9eb949f93ac25370dd" data-testid="card-image" alt="" class="mMx2LUixlnN_Fu45JpFB yMQTWVwLJ5bV8VGiaqU3 yOKoknIYYzAE90pe7_SE Yn2Ei5QZn19gria6LjZj"height="150vh">
+                        <h2>0008 </h2>
+                        <p>Siddhu Moosewala, Jenny Johal, The Kidd</p>
+                    </div>
+                    <div class="card">
+                      <img aria-hidden="false" draggable="false" loading="lazy" src="https://i.scdn.co/image/ab67616d00001e02712701c5e263efc8726b1464" data-testid="card-image" alt="" class="mMx2LUixlnN_Fu45JpFB yMQTWVwLJ5bV8VGiaqU3 yOKoknIYYzAE90pe7_SE Yn2Ei5QZn19gria6LjZj" height="150vh">
+                        <h2> Heat Waves</h2>
+                        <p>Glass Animals</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 
