--- a/index.html
+++ b/index.html
@@ -59,16 +59,30 @@
                 </div>
                 <div>
                     <ul class="other flex font ">
-                       <a href="https://www.spotify.com/in-en/legal/end-user-agreement/"><li>Legal</li></a>
-                        <a href="https://www.spotify.com/in-en/safetyandprivacy"><li>Safety & Privacy Center</li></a>
-                       <a href="https://www.spotify.com/in-en/legal/privacy-policy/"><li>Privacy Policy</li></a> 
+                        <a href="https://www.spotify.com/in-en/legal/end-user-agreement/">
+                            <li>Legal</li>
+                        </a>
+                        <a href="https://www.spotify.com/in-en/safetyandprivacy">
+                            <li>Safety & Privacy Center</li>
+                        </a>
+                        <a href="https://www.spotify.com/in-en/legal/privacy-policy/">
+                            <li>Privacy Policy</li>
+                        </a>
                     </ul>
                     <ul class="other flex font">
-                        <a href="https://www.spotify.com/in-en/legal/cookies-policy/"><li>Cookies</li></a>
-                       <a href="https://www.spotify.com/in-en/legal/privacy-policy/#s3"> <li>About Ads</li></a>
-                        <a href="https://www.spotify.com/in-en/accessibility"><li>Accessibility</li></a>
+                        <a href="https://www.spotify.com/in-en/legal/cookies-policy/">
+                            <li>Cookies</li>
+                        </a>
+                        <a href="https://www.spotify.com/in-en/legal/privacy-policy/#s3">
+                            <li>About Ads</li>
+                        </a>
+                        <a href="https://www.spotify.com/in-en/accessibility">
+                            <li>Accessibility</li>
+                        </a>
                     </ul>
-                    <a href="https://www.spotify.com/in-en/legal/cookies-policy/"><h3> Cookies</h3></a>
+                    <a href="https://www.spotify.com/in-en/legal/cookies-policy/">
+                        <h3> Cookies</h3>
+                    </a>
                 </div>
                 <div class="language flex justify-content item-align font">
                     <div><img class="invert" src="svg/globe.svg" height="18px"></div>
@@ -176,29 +190,34 @@
                 <div class="songList font">
                     <h2>Quick picks</h2>
                     <ul>
-                       <li> <button class="songs font"> Play First Song</button> </li>
-                       <li> <button class="songs font"> Play Second Song</button> </li>
-                       <li> <button class="songs font"> Play Third Song</button> </li>
-                       <li> <button class="songs font"> Play Fourth Song</button> </li>
-                       <li> <button class="songs font"> Play Fivth Song</button> </li>
-                       <li> <button class="songs font"> Play sixth Song</button> </li>
-                       <li> <button class="songs font"> Play seventh Song</button> </li>
-                       <li> <button class="songs font"> Play eighth Song</button> </li>
-                       <li> <button class="songs font"> Play ninth Song</button> </li>
-                       <li> <button class="songs font"> Play tenth Song</button> </li>
+                        <li> <button class="songs font"> Play First Song</button> </li>
+                        <li> <button class="songs font"> Play Second Song</button> </li>
+                        <li> <button class="songs font"> Play Third Song</button> </li>
+                        <li> <button class="songs font"> Play Fourth Song</button> </li>
+                        <li> <button class="songs font"> Play Fivth Song</button> </li>
+                        <li> <button class="songs font"> Play sixth Song</button> </li>
+                        <li> <button class="songs font"> Play seventh Song</button> </li>
+                        <li> <button class="songs font"> Play eighth Song</button> </li>
+                        <li> <button class="songs font"> Play ninth Song</button> </li>
+                        <li> <button class="songs font"> Play tenth Song</button> </li>
                     </ul>
                 </div>
                 <div class="playbar ">
-                    <div class="songinfo">
-
+                    <div class="seekbar">
+                        <div class="circle"></div>
                     </div>
-                    <div class="song-buttons flex item-align justify-content">
-                        <img class="previous" src="svg/previous.svg" alt="">
-                        <img id="play" class="play" src="svg/play.svg" alt="">
-                        <img class="next" src="svg/next.svg" alt="">
-                    </div>
-                    <div class="songtime">
+                    <div class="abovebar flex font">
+                        <div class="songinfo">
 
+                        </div>
+                        <div class="song-buttons flex item-align justify-content">
+                            <img id="previous" class="previous" src="svg/previous.svg" alt="">
+                            <img id="play" class="play" src="svg/play.svg" alt="">
+                            <img id="next" class="next" src="svg/next.svg" alt="">
+                        </div>
+                        <div class="songtime">
+                            <span id="currentTime">0:00</span> / <span id="duration">0:00</span>
+                        </div>
                     </div>
                 </div>
             </div>
