--- a/index.html
+++ b/index.html
@@ -202,6 +202,9 @@
                         <li> <button class="songs font"> Play tenth Song</button> </li>
                     </ul>
                 </div>
+                <div class="sample">
+                    
+                </div>
                 <div class="playbar ">
                     <div class="seekbar">
                         <div class="circle"></div>
