--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 
 <body>
     <nav class="nav flex">
+            
         <ul class="flex">
+            <li><img class="hamburger invert" width="40px" src="svg/hamburger.svg" alt=""></li>
             <li class="invert"><img src="svg/logo.svg" height="40px"></li>
             <li class="button flex item-align justify-content invert"><img src="svg/home.svg" height="30px"></li>
             <li class="invert font flex item-align search">
@@ -203,11 +205,14 @@
                     </ul>
                 </div>
                 <div class="sample">
-                    
+
                 </div>
                 <div class="playbar ">
                     <div class="seekbar">
-                        <div class="circle"></div>
+                        <div class="circle">
+                            <div class="progress"></div>
+                        </div>
+
                     </div>
                     <div class="abovebar flex font">
                         <div class="songinfo">
