--- a/indexupdated.html
+++ b/indexupdated.html
@@ -11,12 +11,12 @@
 
 <body>
     <nav class="nav flex">
-            
+
         <ul class="flex">
             <li><img class="hamburger invert" width="40px" src="svg/hamburger.svg" alt=""></li>
             <li class="invert"><img src="svg/logo.svg" height="40px"></li>
             <li class="button flex item-align justify-content invert"><img src="svg/home.svg" height="30px"></li>
-            <li class=" font flex item-align search">
+            <li class="invert font flex item-align search">
                 <div id="searchleft" class="item-align flex "><img class="icon" src="svg/search.svg" width="30px"> </div>
                     <div class="searchleft text">&nbsp;&nbsp;What do you want to
                         play?</div>
