previous next done

--- a/index.html
+++ b/index.html
@@ -11,16 +11,17 @@
 
 <body>
     <nav class="nav flex">
-            
+
         <ul class="flex">
             <li><img class="hamburger invert" width="40px" src="svg/hamburger.svg" alt=""></li>
             <li class="invert"><img src="svg/logo.svg" height="40px"></li>
             <li class="button flex item-align justify-content invert"><img src="svg/home.svg" height="30px"></li>
             <li class=" font flex item-align search">
-                <div id="searchleft" class="item-align flex "><img class="icon" src="svg/search.svg" width="30px"> </div>
-                    <div class="searchleft text">&nbsp;&nbsp;What do you want to
-                        play?</div>
-               
+                <div id="searchleft" class="item-align flex "><img class="icon" src="svg/search.svg" width="30px">
+                </div>
+                <div class="searchleft text">&nbsp;&nbsp;What do you want to
+                    play?</div>
+
                 <div id="searchright" class="item-align flex">|&nbsp;<img class="browse" src="svg/browse.svg"
                         height="25px"></div>
             </li>
@@ -220,12 +221,17 @@
 
                         </div>
                         <div class="song-buttons flex item-align justify-content">
-                            <img id="previous" class="previous" src="svg/previous.svg" alt="">
+                            <img id="prev" class="previous" src="svg/previous.svg" alt="">
                             <img id="play" class="play" src="svg/play.svg" alt="">
                             <img id="next" class="next" src="svg/next.svg" alt="">
                         </div>
-                        <div class="songtime">
-                            <span id="currentTime">0:00</span> / <span id="duration">0:00</span>
+                        <div>
+                            <div class="songtime">
+                                <span id="currentTime">0:00</span> / <span id="duration">0:00</span>
+                            </div>
+                            <div class="volume">
+                                <img src="svg/volume.svg" alt="">
+                            </div>
                         </div>
                     </div>
                 </div>
