--- a/index.html
+++ b/index.html
@@ -225,12 +225,15 @@
                             <img id="play" class="play" src="svg/play.svg" alt="">
                             <img id="next" class="next" src="svg/next.svg" alt="">
                         </div>
-                        <div>
+                        <div class="timevol">
                             <div class="songtime">
                                 <span id="currentTime">0:00</span> / <span id="duration">0:00</span>
                             </div>
-                            <div class="volume">
+                            <div class="volume flex">
                                 <img src="svg/volume.svg" alt="">
+                                <div class="range">
+                                    <input type="range" name="volume" class="range">
+                                </div>
                             </div>
                         </div>
                     </div>
