playlist songs added

--- a/index.html
+++ b/index.html
@@ -190,6 +190,96 @@
                         <h2> Heat Waves</h2>
                         <p>Glass Animals</p>
                     </div>
+                    <div class="card">
+                        <div class="playdiv">
+                            <button class="play-button">
+                                <svg xmlns="http://www.w3.org/2000/svg" height="24" width="24" viewBox="0 0 24 24"
+                                    fill="black">
+                                    <path
+                                        d="m7.05 3.606 13.49 7.788a.7.7 0 0 1 0 1.212L7.05 20.394A.7.7 0 0 1 6 19.788V4.212a.7.7 0 0 1 1.05-.606" />
+                                </svg>
+                            </button>
+                        </div>
+                        <img aria-hidden="false" draggable="false" loading="lazy"
+                            src="https://i.scdn.co/image/ab67616d00001e02712701c5e263efc8726b1464"
+                            data-testid="card-image" alt=""
+                            class="mMx2LUixlnN_Fu45JpFB yMQTWVwLJ5bV8VGiaqU3 yOKoknIYYzAE90pe7_SE Yn2Ei5QZn19gria6LjZj"
+                            height="150vh">
+                        <h2> Heat Waves</h2>
+                        <p>Glass Animals</p>
+                    </div>
+                    <div class="card">
+                        <div class="playdiv">
+                            <button class="play-button">
+                                <svg xmlns="http://www.w3.org/2000/svg" height="24" width="24" viewBox="0 0 24 24"
+                                    fill="black">
+                                    <path
+                                        d="m7.05 3.606 13.49 7.788a.7.7 0 0 1 0 1.212L7.05 20.394A.7.7 0 0 1 6 19.788V4.212a.7.7 0 0 1 1.05-.606" />
+                                </svg>
+                            </button>
+                        </div>
+                        <img aria-hidden="false" draggable="false" loading="lazy"
+                            src="https://i.scdn.co/image/ab67616d00001e02712701c5e263efc8726b1464"
+                            data-testid="card-image" alt=""
+                            class="mMx2LUixlnN_Fu45JpFB yMQTWVwLJ5bV8VGiaqU3 yOKoknIYYzAE90pe7_SE Yn2Ei5QZn19gria6LjZj"
+                            height="150vh">
+                        <h2> Heat Waves</h2>
+                        <p>Glass Animals</p>
+                    </div>
+                    <div class="card">
+                        <div class="playdiv">
+                            <button class="play-button">
+                                <svg xmlns="http://www.w3.org/2000/svg" height="24" width="24" viewBox="0 0 24 24"
+                                    fill="black">
+                                    <path
+                                        d="m7.05 3.606 13.49 7.788a.7.7 0 0 1 0 1.212L7.05 20.394A.7.7 0 0 1 6 19.788V4.212a.7.7 0 0 1 1.05-.606" />
+                                </svg>
+                            </button>
+                        </div>
+                        <img aria-hidden="false" draggable="false" loading="lazy"
+                            src="https://i.scdn.co/image/ab67616d00001e02712701c5e263efc8726b1464"
+                            data-testid="card-image" alt=""
+                            class="mMx2LUixlnN_Fu45JpFB yMQTWVwLJ5bV8VGiaqU3 yOKoknIYYzAE90pe7_SE Yn2Ei5QZn19gria6LjZj"
+                            height="150vh">
+                        <h2> Heat Waves</h2>
+                        <p>Glass Animals</p>
+                    </div>
+                    <div class="card">
+                        <div class="playdiv">
+                            <button class="play-button">
+                                <svg xmlns="http://www.w3.org/2000/svg" height="24" width="24" viewBox="0 0 24 24"
+                                    fill="black">
+                                    <path
+                                        d="m7.05 3.606 13.49 7.788a.7.7 0 0 1 0 1.212L7.05 20.394A.7.7 0 0 1 6 19.788V4.212a.7.7 0 0 1 1.05-.606" />
+                                </svg>
+                            </button>
+                        </div>
+                        <img aria-hidden="false" draggable="false" loading="lazy"
+                            src="https://i.scdn.co/image/ab67616d00001e02712701c5e263efc8726b1464"
+                            data-testid="card-image" alt=""
+                            class="mMx2LUixlnN_Fu45JpFB yMQTWVwLJ5bV8VGiaqU3 yOKoknIYYzAE90pe7_SE Yn2Ei5QZn19gria6LjZj"
+                            height="150vh">
+                        <h2> Heat Waves</h2>
+                        <p>Glass Animals</p>
+                    </div>
+                    <div class="card">
+                        <div class="playdiv">
+                            <button class="play-button">
+                                <svg xmlns="http://www.w3.org/2000/svg" height="24" width="24" viewBox="0 0 24 24"
+                                    fill="black">
+                                    <path
+                                        d="m7.05 3.606 13.49 7.788a.7.7 0 0 1 0 1.212L7.05 20.394A.7.7 0 0 1 6 19.788V4.212a.7.7 0 0 1 1.05-.606" />
+                                </svg>
+                            </button>
+                        </div>
+                        <img aria-hidden="false" draggable="false" loading="lazy"
+                            src="https://i.scdn.co/image/ab67616d00001e02712701c5e263efc8726b1464"
+                            data-testid="card-image" alt=""
+                            class="mMx2LUixlnN_Fu45JpFB yMQTWVwLJ5bV8VGiaqU3 yOKoknIYYzAE90pe7_SE Yn2Ei5QZn19gria6LjZj"
+                            height="150vh">
+                        <h2> Heat Waves</h2>
+                        <p>Glass Animals</p>
+                    </div>
                 </div>
                 <div class="songList font">
                     <h2>Quick picks</h2>
